# nano-openclaw

./: .gitignore  LICENSE  README.md  exec-approvals-example.json  mcpserver-plan.md  nano-openclaw-example.json5  pyproject.toml
.github/workflows/: test.yml
docs/: CONFIG_EXAMPLE.md
nano_openclaw/: __main__.py  _provider_anthropic.py  _provider_openai.py  _stream_events.py  cli.py  compact.py  external_content.py  images.py  loop.py  prompt.py  provider.py  ssrf_guard.py  tools.py  web_fetch.py  web_search.py
nano_openclaw/approvals/: __init__.py  exec_approvals.py  manager.py  policy.py  types.py  ui.py
nano_openclaw/config/: __init__.py  env_substitution.py  io.py  paths.py  types.py
nano_openclaw/mcp/: materialize.py  runtime.py
nano_openclaw/memory/: __init__.py  active.py  daily.py  dreaming.py  tools.py
nano_openclaw/session/: __init__.py  paths.py  store.py  transcript.py  truncate.py  types.py
nano_openclaw/skills/: __init__.py  cache.py  (+6 more)
tests/: test_approvals.py  test_cancellation.py  test_clawhub_api.py  test_cli_skills.py  test_compact.py  test_config_io.py  test_config_paths.py  test_config_skills.py  test_config_types.py  test_env_substitution.py  test_external_content.py  test_images.py  test_mcp_runtime.py  test_memory_active.py  test_memory_daily.py  test_memory_dreaming.py  test_memory_tools.py  test_provider.py  test_session.py  test_session_paths.py  test_skills_formatter.py  test_skills_gating.py  test_skills_loader.py  test_skills_slash.py  test_ssrf_guard.py  test_tools.py  test_web_fetch.py  test_web_search.py  test_workspace.py
(+6 files in other folders)
